Fix .posted-on on small screens

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -74,6 +74,12 @@ aside,
   display: inline;
 }
 
+@media all and (max-width: 699px) {
+  .posted-on {
+    display: block;
+  }
+}
+
 #footer {
   font-size: small;
 }
